Update slides: change author title to PhD candidate and add advisor information; include summary frame detailing Higgs-portal dark matter investigation and projected sensitivity improvements

--- a/HiggsPortals/2025_Nemoc/slides.tex
+++ b/HiggsPortals/2025_Nemoc/slides.tex
@@ -36,9 +36,11 @@
 
 \title[Higgs-Portal DM with VBF at HL-LHC]{Probing Higgs-Portal Dark Matter with VBF Signatures at the HL-LHC}
 \subtitle{}
-\author[C. Rodríguez]{
+\author[C. Rodríguez]{%
 	\vspace{2em}\\
-	MSc. Cristian Fernando Rodríguez Cruz\inst{1}\\
+	PhD(c). Cristian Fernando Rodríguez Cruz\inst{1}\\
+    $$ $$
+    Asesor: Prof. Andrés Florez\inst{1}\\
 	\vspace{1em}
 }
 
@@ -387,6 +389,27 @@ Contemporary Physics}
         \includegraphics[width=.6\textwidth]{../Images/Z4_Example.png}
     \end{center}
     \cite{Yaguna:2021rds}
+\end{frame}
+
+\begin{frame}{Summary}
+    \begin{itemize}
+        \item We investigated Higgs-portal dark matter models using VBF + MET signatures at the LHC
+        \item Performed Monte Carlo simulations with MadGraph5\_aMC@NLO to compute cross sections for VBF Higgs production with invisible decays
+        \item Analyzed kinematic variables showing VBF jets are:
+        \begin{itemize}
+            \item High-$p_T$ and forward
+            \item In opposite hemispheres with large $\Delta\eta$ separation
+            \item Associated with high missing transverse energy
+        \end{itemize}
+        \item Current experimental limit: $\text{BR}(H \to \text{inv}) < 0.145$ (ATLAS, 139 fb$^{-1}$)
+        \item Projected sensitivity improvements:
+        \begin{itemize}
+            \item Run 3 (300 fb$^{-1}$): $\text{BR}(H \to \text{inv}) < 0.08$
+            \item HL-LHC (3 ab$^{-1}$): $\text{BR}(H \to \text{inv}) < 0.008$
+            \item FCC (30 ab$^{-1}$): $\text{BR}(H \to \text{inv}) < \mathcal{O}(10^{-3})$
+        \end{itemize}
+        \item Provided exclusion contours for scalar and fermionic DM in the mass-coupling parameter space
+    \end{itemize}
 \end{frame}
 
 \begin{frame}
