Update author title and advisor information in slides: change "Asesor" to "Research advisor"

--- a/HiggsPortals/2025_Nemoc/slides.tex
+++ b/HiggsPortals/2025_Nemoc/slides.tex
@@ -40,7 +40,7 @@
 	\vspace{2em}\\
 	PhD(c). Cristian Fernando Rodríguez Cruz\inst{1}\\
     $$ $$
-    Asesor: Prof. Andrés Florez\inst{1}\\
+    Research advisor: Prof. Andrés Florez\inst{1}\\
 	\vspace{1em}
 }
 
