Update author and advisor information in slides: add email addresses for contact

--- a/HiggsPortals/2025_Nemoc/slides.tex
+++ b/HiggsPortals/2025_Nemoc/slides.tex
@@ -37,11 +37,13 @@
 \title[Higgs-Portal DM with VBF at HL-LHC]{Probing Higgs-Portal Dark Matter with VBF Signatures at the HL-LHC}
 \subtitle{}
 \author[C. Rodríguez]{%
-	\vspace{2em}\\
-	PhD(c). Cristian Fernando Rodríguez Cruz\inst{1}\\
+    \vspace{2em}\\
+    PhD(c). Cristian Fernando Rodríguez Cruz\inst{1}\\
+    \href{mailto:c.rodriguez45@uniandes.edu.co}{c.rodriguez45@uniandes.edu.co}\\
     $$ $$
     Research advisor: Prof. Andrés Florez\inst{1}\\
-	\vspace{1em}
+    \href{mailto:ca.florez@uniandes.edu.co}{ca.florez@uniandes.edu.co}\\
+    \vspace{1em}
 }
 
 \institute[Uniandes]{\inst{1} Universidad de los Andes\and
