Update institute information in slides: change to NEMO-C 2025

--- a/HiggsPortals/2025_Nemoc/slides.tex
+++ b/HiggsPortals/2025_Nemoc/slides.tex
@@ -46,7 +46,7 @@
     \vspace{1em}
 }
 
-\institute[Uniandes]{\inst{1} Universidad de los Andes\and
+\institute[NEMO-C 2025]{\inst{1} Universidad de los Andes\and
 % \inst{2} Pontificia Universidad Católica del Perú 
 }
 \date{\today}
