Add references slide to presentation

--- a/HiggsPortals/2025_Nemoc/slides.tex
+++ b/HiggsPortals/2025_Nemoc/slides.tex
@@ -420,4 +420,9 @@ Contemporary Physics}
     \vfill
     \Large Questions?
 \end{frame}
+
+% PRINT BIBLIOGRAPHY
+\begin{frame}[allowframebreaks]{References}
+    \printbibliography[heading=none]
+\end{frame}
 \end{document}
