Remove commented-out graphics and adjust bibliography printing in slides

--- a/HiggsPortals/2025_Nemoc/slides.tex
+++ b/HiggsPortals/2025_Nemoc/slides.tex
@@ -220,10 +220,6 @@ Contemporary Physics}
         \item At least 2 jets with $p_T > 30$ GeV
         \item Large missing transverse momentum ($p_T^{\text{miss}} > 100$ GeV)
     \end{itemize}
-
-    % \begin{minipage}{0.47\textwidth}
-    %     \includegraphics[width=\textwidth]{../Images/subleading_jet_pt_comparison.pdf}
-    % \end{minipage}
 \end{frame}
 \begin{frame}{VBF Jets are boosted with High-PT signatures}{Leading Jet}
     \begin{minipage}{0.97\textwidth}
@@ -240,9 +236,7 @@ Contemporary Physics}
     \begin{minipage}{0.97\textwidth}
         \includegraphics[width=\textwidth]{../Images/leading_jet_eta_comparison.pdf}
     \end{minipage}
-    % \begin{minipage}{0.47\textwidth}
-    %     \includegraphics[width=\textwidth]{../Images/subleading_jet_pt_comparison.pdf}
-    % \end{minipage}
+
 \end{frame}
 
 \begin{frame}{VBF Jets are in opposite longitudinal hemispheres}
@@ -423,6 +417,6 @@ Contemporary Physics}
 
 % PRINT BIBLIOGRAPHY
 \begin{frame}[allowframebreaks]{References}
-    \printbibliography[heading=none]
+    \printbibliography%[heading=none]
 \end{frame}
 \end{document}
