Fix equations in slides.tex for improved clarity and accuracy

--- a/HiggsPortals/2025_Nemoc/slides.tex
+++ b/HiggsPortals/2025_Nemoc/slides.tex
@@ -303,8 +303,8 @@ Contemporary Physics}
 
     To improve the sensitivity of the search, 
     \begin{equation}
-        \kappa = \frac{\sum_i s_i w_i}{\sqrt{\sum_i (s_i + b_i + \delta_{sys}^2)^2 w_i^2}}
-        =\frac{\sum_i \textcolor{orange}{\sigma_{s_i}} \textcolor{red}{\epsilon_{s_i}} \textcolor{purple}{w_i}}{\sqrt{\sum_i (\textcolor{orange}{\sigma_{s_i}}\textcolor{red}{\epsilon_{s_i}} + \sigma_{b_i}\textcolor{red}{\epsilon_{b_i}} + \textcolor{green}{\delta_{\sigma_{sys}}^2})^2 \textcolor{purple}{w_i}^2}}\sqrt{\textcolor{blue}{\mathcal L}}
+        \kappa = \frac{\sum_i s_i w_i}{\sqrt{\sum_i (s_i + b_i + \delta_{sys}^2) w_i^2}}
+        =\frac{\sum_i \textcolor{orange}{\sigma_{s_i}} \textcolor{red}{\epsilon_{s_i}} \textcolor{purple}{w_i}}{\sqrt{\sum_i (\textcolor{orange}{\sigma_{s_i}}\textcolor{red}{\epsilon_{s_i}} + \sigma_{b_i}\textcolor{red}{\epsilon_{b_i}} + \textcolor{green}{\delta_{\sigma_{sys}}^2}) \textcolor{purple}{w_i}^2}}\sqrt{\textcolor{blue}{\mathcal L}}
     \end{equation}
     We can
     \begin{itemize}
@@ -323,9 +323,9 @@ Contemporary Physics}
     So, taking $\kappa=1.69$ we have
 
     \begin{equation}
-         \frac{\sum_i \sigma_{s_i} \epsilon_{s_i} w_i}{\sqrt{\sum_i (\sigma_{s_i}\epsilon_{s_i} + \sigma_{b_i}\epsilon_{b_i} + \delta_{\sigma_{sys}}^2)^2 w_i^2}}
+         \frac{\sum_i \sigma_{s_i} \epsilon_{s_i} w_i}{\sqrt{\sum_i (\sigma_{s_i}\epsilon_{s_i} + \sigma_{b_i}\epsilon_{b_i} + \delta_{\sigma_{sys}}^2) w_i^2}}
          =
-         \frac{\sum_i \sigma_{s_i}^{\text{VBF}}(\text{BR}) \epsilon_{s_i} w_i}{\sqrt{\sum_i (\sigma_{s_i}^{\text{VBF}}(\text{BR}) + \sigma_{b_i}\epsilon_{b_i} + \delta_{\sigma_{sys}}^2)^2 w_i^2}}
+         \frac{\sum_i \sigma_{s_i}^{\text{VBF}}(\text{BR}) \epsilon_{s_i} w_i}{\sqrt{\sum_i (\sigma_{s_i}^{\text{VBF}}(\text{BR})\epsilon_{s_i}  + \sigma_{b_i}\epsilon_{b_i} + \delta_{\sigma_{sys}}^2) w_i^2}}
          = \frac{1.69}{\sqrt{\mathcal L}}
     \end{equation}
 
