Refactor VBF_kin notebook and update file paths
- Changed the path for the LHE file to be relative to the current directory.
- Added code to save VBF MET results to a CSV file.
- Updated paths for reading QCD, Z-jets, and W-jets preselection CSV files to be relative.
- Modified paths for saving plots to be relative, removing the 'HiggsPortals' directory prefix.

--- a/HiggsPortals/VBF_kin.ipynb
+++ b/HiggsPortals/VBF_kin.ipynb
@@ -31,7 +31,7 @@
    "outputs": [],
    "source": [
     "current_folder = os.getcwd()\n",
-    "lhe_file = os.path.join(current_folder, 'HiggsPortals/unweighted_events.lhe.gz')\n",
+    "lhe_file = os.path.join(current_folder, 'unweighted_events.lhe.gz')\n",
     "\n",
     "childs = readLHEF(lhe_file)\n",
     "\n"
@@ -141,13 +141,24 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "6386d7c4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "vbf_met_results = results\n",
+    "vbf_met_results.to_csv('vbf_met_preselection.csv', index=False)\n",
+    "qcd_results = pd.read_csv('qcd_preselection.csv')\n",
+    "zjets_results = pd.read_csv('z_jets_preselection.csv')\n",
+    "wjets_results = pd.read_csv('w_jets_preselection.csv')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "c8565350",
    "metadata": {},
    "outputs": [],
    "source": [
-    "qcd_results = pd.read_csv('HiggsPortals/qcd_preselection.csv')\n",
-    "zjets_results = pd.read_csv('HiggsPortals/z_jets_preselection.csv')\n",
-    "wjets_results = pd.read_csv('HiggsPortals/w_jets_preselection.csv')\n",
     "\n",
     "# Cross-sections\n",
     "xs_zjets = 5.89\n",
@@ -219,7 +230,7 @@
     "plt.legend()\n",
     "plt.grid(True, alpha=0.3)\n",
     "plt.tight_layout()\n",
-    "plt.savefig('HiggsPortals/Images/leading_jet_pt_comparison.pdf')\n",
+    "plt.savefig('Images/leading_jet_pt_comparison.pdf')\n",
     "plt.close()\n",
     "\n",
     "# Plot 2: Subleading Jet PT comparison\n",
@@ -254,7 +265,7 @@
     "plt.legend()\n",
     "plt.grid(True, alpha=0.3)\n",
     "plt.tight_layout()\n",
-    "plt.savefig('HiggsPortals/Images/subleading_jet_pt_comparison.pdf')\n",
+    "plt.savefig('Images/subleading_jet_pt_comparison.pdf')\n",
     "plt.close()\n",
     "\n",
     "# Plot 3: Leading Jet Eta comparison\n",
@@ -282,7 +293,7 @@
     "plt.legend()\n",
     "plt.grid(True, alpha=0.3)\n",
     "plt.tight_layout()\n",
-    "plt.savefig('HiggsPortals/Images/leading_jet_eta_comparison.pdf')\n",
+    "plt.savefig('Images/leading_jet_eta_comparison.pdf')\n",
     "plt.close()\n",
     "\n",
     "# Plot 4: Subleading Jet Eta comparison\n",
@@ -310,7 +321,7 @@
     "plt.legend()\n",
     "plt.grid(True, alpha=0.3)\n",
     "plt.tight_layout()\n",
-    "plt.savefig('HiggsPortals/Images/subleading_jet_eta_comparison.pdf')\n",
+    "plt.savefig('Images/subleading_jet_eta_comparison.pdf')\n",
     "plt.close()\n",
     "\n",
     "# Plot 5: Dijet Mass comparison\n",
@@ -343,7 +354,7 @@
     "plt.legend()\n",
     "plt.grid(True, alpha=0.3)\n",
     "plt.tight_layout()\n",
-    "plt.savefig('HiggsPortals/Images/dijet_mass_comparison.pdf')\n",
+    "plt.savefig('Images/dijet_mass_comparison.pdf')\n",
     "plt.close()\n",
     "\n",
     "# Plot 6: Delta Eta comparison\n",
@@ -374,7 +385,7 @@
     "plt.legend()\n",
     "plt.grid(True, alpha=0.3)\n",
     "plt.tight_layout()\n",
-    "plt.savefig('HiggsPortals/Images/delta_eta_comparison.pdf')\n",
+    "plt.savefig('Images/delta_eta_comparison.pdf')\n",
     "plt.close()\n",
     "\n",
     "# Plot 7: Delta Phi comparison\n",
@@ -406,7 +417,7 @@
     "plt.legend()\n",
     "plt.grid(True, alpha=0.3)\n",
     "plt.tight_layout()\n",
-    "plt.savefig('HiggsPortals/Images/delta_phi_comparison.pdf')\n",
+    "plt.savefig('Images/delta_phi_comparison.pdf')\n",
     "plt.close()\n",
     "\n",
     "# Plot 8: Delta R comparison\n",
@@ -434,7 +445,7 @@
     "plt.legend()\n",
     "plt.grid(True, alpha=0.3)\n",
     "plt.tight_layout()\n",
-    "plt.savefig('HiggsPortals/Images/delta_r_comparison.pdf')\n",
+    "plt.savefig('Images/delta_r_comparison.pdf')\n",
     "plt.close()\n",
     "\n",
     "# Plot 9: MET_PT comparison\n",
@@ -467,7 +478,7 @@
     "plt.legend()\n",
     "plt.grid(True, alpha=0.3)\n",
     "plt.tight_layout()\n",
-    "plt.savefig('HiggsPortals/Images/met_comparison.pdf')\n",
+    "plt.savefig('Images/met_comparison.pdf')\n",
     "plt.close()\n",
     "\n",
     "# Plot 10: Product of Jet Etas comparison\n",
@@ -502,12 +513,12 @@
     "plt.legend()\n",
     "plt.grid(True, alpha=0.3)\n",
     "plt.tight_layout()\n",
-    "plt.savefig('HiggsPortals/Images/eta_product_comparison.pdf')\n",
+    "plt.savefig('Images/eta_product_comparison.pdf')\n",
     "plt.close()\n",
     "\n",
     "# Save the combined plot\n",
     "plt.tight_layout()\n",
-    "plt.savefig('HiggsPortals/Images/vbf_qcd_vjets_comparison.pdf')\n",
+    "plt.savefig('Images/vbf_qcd_vjets_comparison.pdf')\n",
     "plt.show()\n",
     "\n",
     "# Helper functions for weighted statistics\n",
@@ -607,7 +618,7 @@
     "plt.yscale('log')\n",
     "\n",
     "# Save the plot\n",
-    "plt.savefig('HiggsPortals/Images/met_comparison_after_vbf_cuts.pdf')\n",
+    "plt.savefig('Images/met_comparison_after_vbf_cuts.pdf')\n",
     "\n",
     "# Print efficiency summary\n",
     "print(f\"\\nVBF Cut Efficiencies:\")\n",
